# AP_NeuralNetworksFromScratch

./: ex21_template.py
ex01/templates/: ex11_template.py  ex12_template.py
ex02_jax/: pyproject.toml
ex02_jax/template/: ex21_template.py  ex22_jax_template.py
ex03/: compare_cpu_gpu.py  diff_benchmark_sizes.py  ex32_cpu.py  ex32_cupy.py
template/: ex11_template.py  ex12_template.py
